force-app/main/default/objects/Account/fields/ACV_USD__c.field-meta.xml
<CustomField>
    <fullName>ACV_USD__c</fullName>
    <description>Account ACV in USD rolled up from related Contract USD amounts - provides multi-currency Account reporting in USD regardless of individual Contract currencies (Text format for proper $ display)</description>
    <inlineHelpText>Account Annual Contract Value in USD calculated by summing Contract ACV USD amounts. Populated automatically via Flow/Apex rollup logic. Displays as $123,456.78 format.</inlineHelpText>
    <label>ACV (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>