force-app/main/default/objects/Account/fields/ACV_USD_Reporting__c.field-meta.xml
<CustomField>
    <fullName>ACV_USD_Reporting__c</fullName>
    <description>USD value in Number format for SFDC reporting and aggregation</description>
    <inlineHelpText>This field contains the same USD value as ACV USD but in Number format to enable Salesforce reporting, rollups, and calculations.</inlineHelpText>
    <label>ACV (Reporting)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>