force-app/main/default/objects/Account/fields/AnnualRevenue_USD__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue_USD__c</fullName>
    <description>Account Annual Revenue in USD converted from standard AnnualRevenue field - provides multi-currency Account reporting in USD regardless of Account currency (Text format for proper $ display)</description>
    <inlineHelpText>Account Annual Revenue converted to USD using exchange rates. Displays as $123,456.78 format.</inlineHelpText>
    <label>Annual Revenue (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>