force-app/main/default/objects/Account/fields/Contract_Count__c.field-meta.xml
<CustomField>
    <fullName>Contract_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of contracts on this account (any status). Used for monitoring and business insights.</description>
    <inlineHelpText>Automatically populated by Contract trigger. Do not manually edit.</inlineHelpText>
    <label>Contract Count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>