force-app/main/default/objects/Account/fields/Has_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Has_Contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this account has one or more contracts (any status). Used by Account flow for performance optimization.</description>
    <inlineHelpText>Automatically populated by Contract trigger. Do not manually edit.</inlineHelpText>
    <label>Has Contracts</label>
    <type>Checkbox</type>
</CustomField>