force-app/main/default/objects/Account/fields/Incremental_ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ARR_USD__c</fullName>
    <description>Account Incremental ARR in USD rolled up from related Contract USD amounts - provides multi-currency Account reporting in USD regardless of individual Contract currencies (Text format for proper $ display)</description>
    <inlineHelpText>Account Incremental ARR in USD calculated by summing Contract Incremental ARR USD amounts. Populated automatically via Flow/Apex rollup logic. Displays as $123,456.78 format.</inlineHelpText>
    <label>Incremental ARR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>