force-app/main/default/objects/Account/fields/MRR_USD__c.field-meta.xml
<CustomField>
    <fullName>MRR_USD__c</fullName>
    <description>Account MRR in USD rolled up from related Contract USD amounts - provides multi-currency Account reporting in USD regardless of individual Contract currencies (Text format for proper $ display)</description>
    <inlineHelpText>Account Monthly Recurring Revenue in USD calculated by summing Contract MRR USD amounts. Populated automatically via Flow/Apex rollup logic. Displays as $123,456.78 format.</inlineHelpText>
    <label>MRR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>