force-app/main/default/objects/Account/fields/Previous_Year_ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_ARR_USD__c</fullName>
    <description>Account Previous Year ARR in USD for tracking year-over-year changes - provides multi-currency Account reporting in USD regardless of individual Contract currencies (Text format for proper $ display)</description>
    <inlineHelpText>Previous Year ARR in USD for tracking account ARR history. Displays as $123,456.78 format.</inlineHelpText>
    <label>Previous Year ARR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>