force-app/main/default/objects/Account/fields/Previous_Year_MRR_USD__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_MRR_USD__c</fullName>
    <description>Account Previous Year MRR in USD for tracking year-over-year changes - provides multi-currency Account reporting in USD regardless of individual Contract currencies (Text format for proper $ display)</description>
    <inlineHelpText>Previous Year MRR in USD for tracking account MRR history. Displays as $123,456.78 format.</inlineHelpText>
    <label>Previous Year MRR (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>