force-app/main/default/objects/Account/fields/Previous_Year_TCV_USD__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_TCV_USD__c</fullName>
    <description>Account Previous Year TCV in USD for tracking year-over-year changes - provides multi-currency Account reporting in USD regardless of individual Contract currencies (Text format for proper $ display)</description>
    <inlineHelpText>Previous Year TCV in USD for tracking account value history. Displays as $123,456.78 format.</inlineHelpText>
    <label>Previous Year TCV (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>