force-app/main/default/objects/Account/fields/TCV_USD__c.field-meta.xml
<CustomField>
    <fullName>TCV_USD__c</fullName>
    <description>Account TCV in USD rolled up from related Contract USD amounts - provides multi-currency Account reporting in USD regardless of individual Contract currencies (Text format for proper $ display)</description>
    <inlineHelpText>Account Total Contract Value in USD calculated by summing Contract TCV USD amounts. Populated automatically via Flow/Apex rollup logic. Displays as $123,456.78 format.</inlineHelpText>
    <label>TCV (USD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>